--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ img{
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 6vmin;
+    font-size: 2rem;
     margin-top: 3rem;
     gap: 5rem;
 }
